xx May 2006: 0.2.12 Miek <miek@miek.nl>
  -- bugfixes and ... --
   * dump.sh, restore.sh: add -a flag


05 May 2006: 0.2.11 Miek <miek@miek.nl>
  -- major feature enhancement + major bugfixes --
   * rdup is now feature complete
   * dump.sh, restore.sh: make remote backups really work
   * scripts: implemented sanity checks on the data received. 
   extended attributes: [linux only atm]
   * mirror.sh: added -a flag, only needed here.
   * rdup: -a flag: read extended attributes to restore uid/gid 
   * bandwidth shaping was added to dump.sh and restore.sh, depends on
     cstream
   * rorrim.sh, monthday.sh: cosmetic fixes
   * rdup: added a msg function to remove all fprintfs
   * documentation was updated and improved


01 May 2006: 0.2.10 Miek <miek@miek.nl>
  -- tiny bugfixes + major restore updates --
   * rdup: formalize file handling in rdup:
     - plain files are accepted on the cmd line (they
       already were, but generated a (harmless) warning)
     - if files/dirs do not exist rdup skips them, instead
       of quiting
   * rdup.8: documentation updates, and make it more clear
     that rdup handles file arguments just fine.
   * NEW: restore.sh: added this as a wrapper around rdup and
     monthday.sh and rorrim.sh
   * REMOVED: purge.sh, I want to focus on dump/restore. Everyone
     can write a rm -rf script
   * dump.sh, restore.sh: added -c user@remote switch to ease in 
     remote backups and remote restores.
   * man rdup.8: added -r/-m options.
   * doc: started tex documentation about rdup and its usage, 
     see the tex/ directory.
   * restore.sh, rorrim.sh: -p NUM (strip leading path components
     implmented)
   * Both dump.sh -c and restore.sh need testing.


25 Apr 2006: 0.2.9 Miek <miek@miek.nl>
  -- bugfixes + restore updates --
   * gzip.sh, crypt.sh: ignore and accept '-c' option
   * crypt.sh: use mcrypt -q to be more silent
   * monthday.sh: implement -c option 
     script has completely been rewritten